# omega-tab

./: .gitignore  AGENTS.md  DEPLOYMENT.md  QUICKSTART.md  README.md  docker-compose.yml  package.json  supabase_types.ts
.github/workflows/: release.yml
client/: .env.example  README.md  bun.lockb  index.html  package.json  vite.config.ts  vitest.config.ts
client/docs/.vitepress/: config.mts
client/public/: robots.txt  site.webmanifest  sitemap.xml
client/src/: App.vue  main.ts
client/src/assets/css/: base.css  main.css  tailwind.css
client/src/components/: AddLinkCard.vue  AuthModal.vue  CommandPalette.vue  EditLinkModal.vue  Feedback.vue  LinkCard.vue  LinkColumns.vue  Login.vue  NewLandingPage.vue  SearchBar.vue  SignUp.vue  StripeCheckout.vue  TeamManageModal.vue  UserMenu.vue  WeatherAndTime.vue  new_search_bar.vue
client/src/composables/: useApi.ts  useDatabase.ts
client/src/constants/: api.ts
client/src/data/: cancelReasons.ts
client/src/plugins/: vuetify.js
client/src/router/: index.ts
client/src/services/: api.ts  auth.ts
client/src/stores/: docs.ts  feedback.ts  links.ts  searchEngine.ts  settings.ts  tools.ts  user.ts
client/src/types/: CancellationReasons.ts  Database.ts  LinkCard.ts  SearchHistory.ts  Subscription.ts  User.ts  UserSettings.ts
client/src/utils/: cache.ts  openUrl.ts
client/src/views/: Confirm.vue  Home.vue  LoginScreen.vue  Plans.vue  PrivacyPolicy.vue  Settings.vue  SignUpScreen.vue  TermsOfService.vue  Test.vue
docs/: getting-started.md  guides.md  index.md  package.json
docs/.vitepress/: config.mts
docs/guides/: command-palette.md  confluence-integration.md  creating-a-new-link.md  editing-a-link.md  jira-integration.md  keyboard-shortcuts.md  linear-integration.md  manage-your-subscription.md  metadata-fetching.md  search-suggestions.md  the-search-bar.md  user-settings.md
landing-page/: env.d.ts  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
landing-page/src/: App.vue  main.ts
landing-page/src/assets/css/: base.css  tokens.css
landing-page/src/components/: AppFooter.vue  AppHeader.vue
landing-page/src/router/: index.ts
landing-page/src/views/: LandingPage.vue  PrivacyPolicy.vue  TermsOfService.vue
scripts/: build-release.sh  bump-version.sh  install.sh
server/: .env.example  Cargo.toml  Cross.toml  package.json
server/src/: brave.rs  database.rs  main.rs  middleware.rs  resend.rs  stripe_client.rs  supabase.rs  user_jwt.rs
supabase/: config.toml
