[package]
name = "bnt-server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stripe = { version = "0.39.1", features = ["runtime-tokio-hyper"] }
axum = { version = "0.8.1", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
reqwest = {version = "0.12.12", features = ["json"] }
anyhow = "1.0.93"
uuid = "1.12.1"
chrono = "0.4.39"