[package]
name = "bnt-server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stripe = { version = "0.40.0", features = ["runtime-tokio-hyper"] }
axum = { version = "0.8.1", features = ["json", "macros"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors", "fs"] }
tower = "0.5.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
reqwest = {version = "0.12.12", features = ["json"] }
anyhow = "1.0.93"
uuid = { version = "1.12.1", features = ["v4"] }
chrono = "0.4.39"
scraper = "0.22.0"
sentry = { version="0.36.0", features = ["anyhow","tracing"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
resend-rs = "0.11.2"
base64 = "0.22.1"
url = "2.5.4"
jsonwebtoken = "9.3.1"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres", "macros", "chrono", "uuid" ] }