[package]
name = "omega-tab"
version = "0.2.2"
edition = "2021"

[[bin]]
name = "OmegaTab"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8.1", features = ["json", "macros"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors", "fs"] }
tower = "0.5.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
reqwest = { version = "0.12.12", features = ["json"] }
anyhow = "1.0.93"
uuid = { version = "1.12.1", features = ["v4"] }
chrono = { version = "0.4.39", features = ["serde"] }
scraper = "0.22.0"
sentry = { version = "0.36.0", features = ["anyhow", "tracing"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
resend-rs = "0.11.2"
base64 = "0.22.1"
url = "2.5.4"
jsonwebtoken = "9.3.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "chrono"] }
bcrypt = "0.15"
rust-embed = "8.2"
mime_guess = "2.0"
tray-icon = "0.14"
image = "0.24"
dirs = "5.0"
ctrlc = "3.4"

# gtk is already a transitive dependency of tray-icon on Linux,
# we just need to re-export it to call gtk::init()
[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "2.4"